@@ -1,3 +1,8 @@
+2004-12-21  Eric B. Weddington  <ericw@evcohs.com>
+
+	* include/avr/iom32.h: Add USART* signal names to match datasheet.
+	[Fix for bug #11315]
+
 2004-12-20  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	* doc/examples/demo/Makefile: Default to an ATmega8 now.
